# Aspose.PDF-FOSS-for-Cpp

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  THIRD_PARTY_NOTICES.md  build.bat
.github/workflows/: ci.yml
examples/: 01_pages.cpp  02_read_metadata.cpp  03_write_metadata.cpp  04_text_extraction.cpp  05_save_roundtrip.cpp  06_devices_surface.cpp  07_render_png.cpp  08_render_tiff.cpp  09_indexed_tiff.cpp  10_render_text_pdf.cpp  11_render_standard14.cpp  12_create_features.cpp  CMakeLists.txt  README.md
include/aspose/pdf/: af_relationship.hpp  artifact.hpp  artifact_collection.hpp  base_paragraph.hpp  bitmap_info.hpp  bmp_device.hpp  border_info.hpp  border_side.hpp  cell.hpp  cells.hpp  color.hpp  color_depth.hpp  compression_type.hpp  crypto_algorithm.hpp  device.hpp  document.hpp  document_device.hpp  document_info.hpp  document_privilege.hpp  embedded_file_collection.hpp  file_encoding.hpp  file_specification.hpp  floating_box.hpp  font.hpp  font_repository.hpp  form_presentation_mode.hpp  graph_info.hpp  horizontal_alignment.hpp  hyperlink.hpp  i_index_bitmap_converter.hpp  image_device.hpp  jpeg_device.hpp  load_options.hpp  margin_info.hpp  margins.hpp  metadata.hpp  named_destination_collection.hpp  numbering_style.hpp  outline_collection.hpp  outline_item_collection.hpp  (+41 more)
include/internal/: aes_cbc.hpp  agl.hpp  ascii85.hpp  asciihex.hpp  bigint.hpp  binarize_bradley.hpp  bmp_decoder.hpp  bmp_encoder.hpp  ccitt.hpp  cff.hpp  colorspace.hpp  content_stream.hpp  crypt_filter.hpp  dct_encoder.hpp  dctdecode.hpp  digest.hpp  encoding.hpp  encoding_tables.hpp  encrypt_parser.hpp  encrypt_writer.hpp  flate.hpp  glyph_rasterizer.hpp  image_compositor.hpp  jbig2.hpp  jpx.hpp  jpx_detail.hpp  lexer.hpp  lzw.hpp  objects.hpp  outlines.hpp  page_renderer.hpp  pages_tree.hpp  palette_quantiser.hpp  pdf_writer_incremental.hpp  pkcs7_keymat.hpp  pkcs7_sign.hpp  png_decoder.hpp  png_encoder.hpp  rasterizer.hpp  rc4.hpp  (+12 more)
src/internal/: aes_cbc.cpp  agl.cpp  agl_data.inc  ascii85.cpp  asciihex.cpp  bigint.cpp  binarize_bradley.cpp  bmp_decoder.cpp  bmp_encoder.cpp  ccitt.cpp  cff.cpp  cff_strings.inc  colorspace.cpp  content_stream.cpp  crypt_filter.cpp  dct_encoder.cpp  dctdecode.cpp  digest.cpp  encoding.cpp  encoding_tables.cpp  encoding_tables_data.inc  encrypt_parser.cpp  encrypt_writer.cpp  flate.cpp  glyph_rasterizer.cpp  image_compositor.cpp  jbig2.cpp  jbig2_data.inc  jpx.cpp  lexer.cpp  lzw.cpp  objects.cpp  outlines.cpp  page_renderer.cpp  pages_tree.cpp  palette_quantiser.cpp  pdf_writer_incremental.cpp  pkcs7_sign.cpp  png_decoder.cpp  png_encoder.cpp  (+15 more)
src/internal/standard14_outlines.fonts/: standard14_outlines.py
src/public/: _pending.hpp  alignment_type.cpp  annotation.cpp  annotation_collection.cpp  annotation_selector.cpp  artifact.cpp  barcode_field.cpp  base_paragraph.cpp  bitmap_info.cpp  bleed_mark_annotation.cpp  bmp_device.cpp  bookmark.cpp  border.cpp  border_info.cpp  button_field.cpp  caret_annotation.cpp  cell.cpp  cells.cpp  characteristics.cpp  checkbox_field.cpp  choice_field.cpp  circle_annotation.cpp  color.cpp  color_bar_annotation.cpp  combo_box_field.cpp  common_figure_annotation.cpp  corner_printer_mark_annotation.cpp  date_field.cpp  default_appearance.cpp  device.cpp  doc_mdp_signature.cpp  document.cpp  document_device.cpp  document_info.cpp  document_privilege.cpp  drawing.cpp  embedded_file_collection.cpp  explicit_destinations.cpp  external_signature.cpp  facade.cpp  (+104 more)
tests/: actions_smoke_test.cpp  annotation_collection_smoke_test.cpp  annotation_load_on_open_smoke_test.cpp  annotation_save_through_smoke_test.cpp  annotation_selector_smoke_test.cpp  annotation_smoke_test.cpp  attachment_load_on_open_smoke_test.cpp  base_paragraph_smoke_test.cpp  bitmap_info_test.cpp  bmp_decoder_smoke_test.cpp  bmp_device_e2e_smoke_test.cpp  bmp_device_smoke_test.cpp  bmp_device_test.cpp  bmp_encoder_smoke_test.cpp  border_info_smoke_test.cpp  ccitt_encode_smoke_test.cpp  cell_image_smoke_test.cpp  cells_smoke_test.cpp  color_smoke_test.cpp  concrete_annotations_smoke_test.cpp  content_stream_inline_image_smoke_test.cpp  content_stream_leniency_smoke_test.cpp  device_test.cpp  document_device_test.cpp  document_encrypt_save_smoke_test.cpp  document_encrypted_open_smoke_test.cpp  document_info_smoke_test.cpp  document_info_test.cpp  document_permissions_getter_smoke_test.cpp  document_privilege_smoke_test.cpp  document_smoke_test.cpp  document_test.cpp  drawing_family_smoke_test.cpp  drawing_render_smoke_test.cpp  drawing_smoke_test.cpp  embedded_files_smoke_test.cpp  encoding_smoke_test.cpp  enum_canonical_values_smoke_test.cpp  explicit_destination_subtypes_smoke_test.cpp  facades_content_editor_delete_image_smoke_test.cpp  (+115 more)
tests/fixtures/bmp_decoder/: bgr24_checker_16.pixels  bgr24_padded_2x3.pixels  bgr24_padded_3x4.pixels  bgr24_padded_5x4.pixels  bgr24_solid_8.pixels  bgra32_checker_8.pixels  bgra32_solid_4.pixels  generate_fixtures.py
tests/fixtures/bmp_encoder/: checker.bgra.bencfix  generate_fixtures.py  gradient.bgr.bencfix  gradient.bgra.bencfix  padded_3x4.bgr.bencfix  padded_5x4.bgr.bencfix  solid.bgr.bencfix  solid.bgra.bencfix  tiny_1x1.bgra.bencfix
tests/fixtures/ccitt/: g3_32x16_diag.ccfix  g3_64x32_hashes.canonical  g3_64x32_hashes.ccfix  g4_120x80_text.canonical  g4_120x80_text.ccfix  g4_128x64_checker.canonical  g4_128x64_checker.ccfix  g4_32x16_diag.canonical  g4_32x16_diag.ccfix  g4_32x16_inverted.canonical  g4_8x4_white.ccfix  (+4 more)
tests/go_parity/: README.md  annotation_go_smoke_test.cpp  document_go_smoke_test.cpp  drawing_go_smoke_test.cpp  encryption_go_smoke_test.cpp  font_go_smoke_test.cpp  form_go_smoke_test.cpp  image_go_smoke_test.cpp  metadata_go_smoke_test.cpp  navigation_go_smoke_test.cpp  outline_go_smoke_test.cpp  page_go_smoke_test.cpp  redact_go_smoke_test.cpp  table_go_smoke_test.cpp  text_go_smoke_test.cpp  xmp_go_smoke_test.cpp
tests/parity/: parity_document.cc  parity_facades.cc  parity_filters.cc  parity_form.cc  parity_page.cc  parity_sig_content_annot_meta.cc
(+596 files in other folders)
